--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ body {
 header {
   background-color:rgb(255, 255, 255);
   padding: 5px 0;
-  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.418);
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.13);
   position:sticky;
   top: 0;
   z-index: 100;
@@ -423,7 +423,7 @@ header nav ul li a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  background: linear-gradient(rgba(0, 0, 0, 0.350), rgba(0, 0, 0, 0.350));
   z-index: 1;
 }
 
@@ -842,7 +842,7 @@ header nav ul li a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.350);
   z-index: 1;
 }
 
@@ -1168,7 +1168,7 @@ header nav ul li a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  background: linear-gradient(rgba(0, 0, 0, 0.247), rgba(0, 0, 0, 0.267));
   z-index: 1;
 }
 
@@ -2354,7 +2354,7 @@ header nav ul li a:hover::after {
 
 .moments-history {
   padding: 80px 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('imagens_ibv/coral/coral_apresentacao_campal2.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.350), rgba(0, 0, 0, 0.350)), url('imagens_ibv/coral/coral.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -3196,6 +3196,7 @@ header nav ul li a:hover::after {
 .programs {
   padding: 0px 0;
   background-color: var(--cinza-suave);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.014), rgba(0, 0, 0, 0.13)), url('img/programs/depositphotos_314344106-stock-illustration-seamless-pattern-school-college-university.jpg');
   border-top: 5px solid var(--verde-esperanca);
 }
 
